xcgui.h



///@}


/// @defgroup groupObjectTypeEx   对象扩展类型
/// @ingroup macroDefine
/// @{
enum XC_OBJECT_TYPE_EX
{
	xc_ex_error=-1,   ///<错误类型
	button_type_default=0, ///<默认类型
	button_type_radio,     ///<单选按钮
	button_type_check,     ///<复选按钮
	button_type_close,     ///<窗口关闭按钮
	button_type_min,       ///<窗口最小化按钮
	button_type_max,       ///<窗口最大化还原按钮

	element_type_layout,   ///<布局元素,启用布局功能的元素
};


///@}


/// @defgroup groupObjectStyle 对象样式(用于区分外观)
/// @ingroup macroDefine
/// @{
enum  XC_OBJECT_STYLE
{
	xc_style_default                =0,
	button_style_default            = xc_style_default,  ///<默认风格
	button_style_check              =1,    ///<复选按钮
	button_style_radio              =2,    ///<单选按钮
	button_style_expand             =3,    ///<展开收缩按钮
	button_style_scrollbar_left     =4,    ///<水平滚动条,左按钮
	button_style_scrollbar_right    =5,    ///<水平滚动条,右按钮
	button_style_scrollbar_up       =6,    ///<垂直滚动条,上按钮
	button_style_scrollbar_down     =7,    ///<垂直滚动条,下按钮
	button_style_scrollbar_slider_h =8,    ///<水平滚动条,滑块
	button_style_scrollbar_slider_v =9,    ///<垂直滚动条,滑块
	button_style_tabBar_button      =10,   ///<TabBar上的标签按钮
	button_style_toolBar_left       =11,   ///<ToolBar左滚动按钮
	button_style_toolBar_right      =12,   ///<ToolBar右滚动按钮

	button_style_pane_close         =13,   ///<窗格关闭按钮
	button_style_pane_lock          =14,   ///<窗格锁定按钮
	button_style_pane_menu          =15,   ///<窗格下拉菜单按钮
	button_style_pane_dockH         =16,   ///<框架窗口左边或右边码头上按钮
	button_style_pane_dockV         =17,   ///<框架窗口上边或下边码头上按钮

	xc_style_frameWnd_dock_left     =18,   ///<框架窗口停靠码头
	xc_style_frameWnd_dock_top      =19,   ///<框架窗口停靠码头
	xc_style_frameWnd_dock_right    =20,   ///<框架窗口停靠码头
	xc_style_frameWnd_dock_bottom   =21,   ///<框架窗口停靠码头

	xc_style_ToolBar_separator      =22,   ///<工具条上的分割线
	xc_style_listBox_comboBox       =23,   ///<下拉组合框弹出的listBox

	//xc_style_richEdit_onlyRead      =23,   ///<编辑框只读模式
};

/// @defgroup groupHandle 句柄列表
/// @ingroup macroDefine
/// @{
typedef void*   HXCGUI;       ///<资源句柄


///@}


//状态--------------------------------------
/// @defgroup groupCommonState3 普通三种状态
/// @ingroup  macroDefine
/// @{
enum  common_state3_
{
	common_state3_leave=0,  ///<离开
	common_state3_stay,     ///<停留
	common_state3_down,     ///<按下
};


///@}

/// @defgroup groupButtonStateFlag 按钮状态
/// @ingroup  macroDefine
/// @{
enum  button_state_
{
	button_state_leave=0,   ///<离开状态
	button_state_stay,      ///<停留状态
	button_state_down,      ///<按下状态
	button_state_check,     ///<选中状态
	button_state_disable,   ///<禁用状态
};


///@}

/// @defgroup   groupComboBoxState ComboBox状态
/// @ingroup macroDefine
/// @{
enum  comboBox_state_
{
	comboBox_state_leave=0,   ///<鼠标离开状态
	comboBox_state_stay=1,    ///<鼠标停留状态
	comboBox_state_down=2,    ///<按下状态
};


///@}


//按钮图标对齐方式
/// @defgroup groupButtonIconAlign 按钮图标对齐方式
/// @ingroup macroDefine
/// @{
enum  button_icon_align_
{
	button_icon_align_left=0,  ///<图标在左边
	button_icon_align_top,     ///<图标在顶部
	button_icon_align_right,   ///<图标在右边
	button_icon_align_bottom,  ///<图标在底部
};

typedef void (CALLBACK *funIdle)();

typedef void (CALLBACK *funExit)();

XC_API void   WINAPI XWidget_Show(HXCGUI hXCGUI, BOOL bShow);

XC_API HELE   WINAPI XWidget_GetParentEle(HXCGUI hXCGUI);

XC_API HXCGUI WINAPI XWidget_GetParent(HXCGUI hXCGUI);

XC_API HWND   WINAPI XWidget_GetHWND(HXCGUI hXCGUI);

XC_API HWINDOW WINAPI XWidget_GetHWINDOW(HXCGUI hXCGUI);

XC_API  void WINAPI XC_RegJsBind(const char* pName, int func);

XC_API  void WINAPI XC_RegFunIdle(funIdle func);

XC_API  void WINAPI XC_RegFunExit(funExit func);

XC_API HBKM WINAPI XBkM_Create();

XC_API void WINAPI XBkM_Destroy(HBKM hBkInfoM);

XC_API int  WINAPI XBkM_SetBkInfo(HBKM hBkInfoM, const wchar_t *pText);

XC_API int  WINAPI XBkM_AddInfo(HBKM hBkInfoM, const wchar_t *pText);

XC_API void WINAPI XBkM_AddBorder(HBKM hBkInfoM, int nState, COLORREF color, BYTE alpha, int width);

XC_API void WINAPI XBkM_AddFill(HBKM hBkInfoM, int nState, COLORREF color, BYTE alpha);

XC_API void WINAPI XBkM_AddImage(HBKM hBkInfoM, int nState, HIMAGE hImage);

XC_API int  WINAPI XBkM_GetCount(HBKM hBkInfoM);

XC_API void WINAPI XBkM_Clear(HBKM hBkInfoM);

XC_API BOOL WINAPI XBkM_Draw(HBKM hBkInfoM, int nState, HDRAW hDraw, RECT* pRect);

XC_API BOOL WINAPI XBkM_DrawEx(HBKM hBkInfoM, int nState, HDRAW hDraw, RECT* pRect, int nStateEx);

XC_API HELE WINAPI XBtn_Create(int x, int y, int cx, int cy, const wchar_t *pName, HXCGUI hParent = NULL);

XC_API BOOL WINAPI XBtn_IsCheck(HELE hEle); //按钮是否被选中
XC_API BOOL WINAPI XBtn_SetCheck(HELE hEle, BOOL bCheck);

XC_API void WINAPI XBtn_SetState(HELE hEle, common_state3_ nState);

XC_API common_state3_  WINAPI XBtn_GetState(HELE hEle);

XC_API button_state_   WINAPI XBtn_GetStateEx(HELE hEle);

XC_API void WINAPI XBtn_SetStyle(HELE hEle, XC_OBJECT_STYLE  nStyle);

XC_API XC_OBJECT_STYLE  WINAPI XBtn_GetStyle(HELE hEle);

XC_API void WINAPI XBtn_SetType(HELE hEle, XC_OBJECT_TYPE_EX nType);

XC_API void WINAPI XBtn_SetTypeEx(HELE hEle, XC_OBJECT_TYPE_EX nType);

XC_API XC_OBJECT_TYPE_EX  WINAPI XBtn_GetType(HELE hEle);

XC_API void WINAPI XBtn_SetGroupID(HELE hEle, int nID);

XC_API int  WINAPI XBtn_GetGroupID(HELE hEle);

XC_API void WINAPI XBtn_SetBindEle(HELE hEle, HELE hBindEle);

XC_API HELE WINAPI XBtn_GetBindEle(HELE hEle);

XC_API void WINAPI XBtn_SetTextAlign(HELE hEle, int nFlags);

XC_API int  WINAPI XBtn_GetTextAlign(HELE hEle);

XC_API void WINAPI XBtn_SetIconAlign(HELE hEle, button_icon_align_ align);

XC_API void WINAPI XBtn_SetOffset(HELE hEle, int x, int y);

XC_API void WINAPI XBtn_SetOffsetIcon(HELE hEle, int x, int y);

XC_API void WINAPI XBtn_SetIconSpace(HELE hEle, int size);

XC_API void WINAPI XBtn_GetText(HELE hEle, out_ wchar_t *pOut, int nOutLen);

XC_API void WINAPI XBtn_SetText(HELE hEle, in_ const wchar_t *pName);

XC_API void WINAPI XBtn_SetIcon(HELE hEle, HIMAGE hImage);

XC_API void WINAPI XBtn_SetIconDisable(HELE hEle, HIMAGE hImage);

XC_API HIMAGE WINAPI XBtn_GetIcon(HELE hEle, int nType);

XC_API void WINAPI XBtn_AddAnimationFrame(HELE hEle, HIMAGE hImage, UINT uElapse);

XC_API void WINAPI XBtn_EnableAnimation(HELE hEle, BOOL bEnable, BOOL bLoopPlay = FALSE);

XC_API void WINAPI XBtn_AddBkBorder(HELE hEle, button_state_ nState, COLORREF color, BYTE alpha, int width);

XC_API void WINAPI XBtn_AddBkFill(HELE hEle, button_state_ nState, COLORREF color, BYTE alpha);

XC_API void WINAPI XBtn_AddBkImage(HELE hEle, button_state_ nState, HIMAGE hImage);

XC_API int  WINAPI XBtn_GetBkInfoCount(HELE hEle);

XC_API void WINAPI XBtn_ClearBkInfo(HELE hEle);

XC_API HELE WINAPI XComboBox_Create(int x, int y, int cx, int cy, HXCGUI hParent = NULL);

XC_API BOOL  WINAPI XComboBox_SetSelItem(HELE hEle, int iIndex);

XC_API void WINAPI XComboBox_GetButtonRect(HELE hEle, out_ RECT* pRect);

XC_API void WINAPI XComboBox_SetButtonSize(HELE hEle, int size);

XC_API void WINAPI XComboBox_SetDropHeight(HELE hEle, int height); //设置下拉列表高度
XC_API int  WINAPI XComboBox_GetDropHeight(HELE hEle);

XC_API HXCGUI WINAPI XComboBox_CreateAdapter(HELE hEle);

XC_API void WINAPI XComboBox_BindAdapter(HELE hEle, HXCGUI hAdapter);

XC_API HXCGUI WINAPI XComboBox_GetAdapter(HELE hEle);

XC_API void WINAPI XComboBox_SetBindName(HELE hEle, const wchar_t*  pName);

XC_API void WINAPI XComboBox_SetItemTemplateXML(HELE hEle, const wchar_t* pXmlFile);

XC_API void WINAPI XComboBox_SetItemTemplateXMLFromString(HELE hEle, const char* pStringXML);

XC_API void WINAPI XComboBox_EnableDrawButton(HELE hEle, BOOL bEnable);

XC_API void WINAPI XComboBox_EnableEdit(HELE hEle, BOOL bEdit);  //启动编辑内容
XC_API void WINAPI XComboBox_EnableDropHeightFixed(HELE hEle, BOOL bEnable);

XC_API void WINAPI XComboBox_AddBkBorder(HELE hEle, comboBox_state_ nState, COLORREF color, BYTE alpha, int width);

XC_API void WINAPI XComboBox_AddBkFill(HELE hEle, comboBox_state_ nState, COLORREF color, BYTE alpha);

XC_API void WINAPI XComboBox_AddBkImage(HELE hEle, comboBox_state_ nState, HIMAGE hImage);

XC_API int  WINAPI XComboboX_GetBkInfoCount(HELE hEle);

XC_API void WINAPI XComboBox_ClearBkInfo(HELE hEle);

XC_API int WINAPI XComboBox_GetSelItem(HELE hEle);

XC_API comboBox_state_ WINAPI XComboBox_GetState(HELE hEle);

XC_API int WINAPI XComboBox_AddItemText(HELE hEle, const wchar_t* pText);

XC_API int WINAPI XComboBox_AddItemTextEx(HELE hEle, const wchar_t* pName, const wchar_t* pText);

XC_API int WINAPI XComboBox_AddItemImage(HELE hEle, HIMAGE hImage);

XC_API int WINAPI XComboBox_AddItemImageEx(HELE hEle, const wchar_t* pName, HIMAGE hImage);

XC_API int WINAPI XComboBox_InsertItemText(HELE hEle, int iItem, const wchar_t* pValue);

XC_API int WINAPI XComboBox_InsertItemTextEx(HELE hEle, int iItem, const wchar_t* pName, const wchar_t* pValue);

XC_API int WINAPI XComboBox_InsertItemImage(HELE hEle, int iItem, HIMAGE hImage);

XC_API int WINAPI XComboBox_InsertItemImageEx(HELE hEle, int iItem, const wchar_t* pName, HIMAGE hImage);

XC_API BOOL WINAPI XComboBox_SetItemText(HELE hEle, int iItem, int iColumn, const wchar_t* pText);

XC_API BOOL WINAPI XComboBox_SetItemTextEx(HELE hEle, int iItem, const wchar_t* pName, const wchar_t* pText);