xcgui.nim


proc XWidget_Show*(hXCGUI: HXCGUI; bShow: BOOL) {.cdecl, importc: "XWidget_Show",
    dynlib: xcgui, discardable.}

proc XWidget_GetParentEle*(hXCGUI: HXCGUI): HELE {.cdecl,
    importc: "XWidget_GetParentEle", dynlib: xcgui, discardable.}

proc XWidget_GetParent*(hXCGUI: HXCGUI): HXCGUI {.cdecl,
    importc: "XWidget_GetParent", dynlib: xcgui, discardable.}

proc XWidget_GetHWND*(hXCGUI: HXCGUI): HWND {.cdecl, importc: "XWidget_GetHWND",
    dynlib: xcgui, discardable.}

proc XWidget_GetHWINDOW*(hXCGUI: HXCGUI): HWINDOW {.cdecl,
    importc: "XWidget_GetHWINDOW", dynlib: xcgui, discardable.}

proc XC_RegJsBind*(pName: cstring; `func`: cint) {.cdecl, importc: "XC_RegJsBind",
    dynlib: xcgui, discardable.}

#~ proc XC_RegFunIdle*(`func`: funIdle) {.cdecl, importc: "XC_RegFunIdle", dynlib: xcgui, discardable.}

#~ proc XC_RegFunExit*(`func`: funExit) {.cdecl, importc: "XC_RegFunExit", dynlib: xcgui, discardable.}

proc XBkM_Create*(): HBKM {.cdecl, importc: "XBkM_Create", dynlib: xcgui, discardable.}

proc XBkM_Destroy*(hBkInfoM: HBKM) {.cdecl, importc: "XBkM_Destroy", dynlib: xcgui, discardable.}

proc XBkM_SetBkInfo*(hBkInfoM: HBKM; pText: ptr WCHAR): cint {.cdecl,
    importc: "XBkM_SetBkInfo", dynlib: xcgui, discardable.}

proc XBkM_AddInfo*(hBkInfoM: HBKM; pText: ptr WCHAR): cint {.cdecl,
    importc: "XBkM_AddInfo", dynlib: xcgui, discardable.}

proc XBkM_AddBorder*(hBkInfoM: HBKM; nState: cint; color: COLORREF; alpha: BYTE;
                    width: cint) {.cdecl, importc: "XBkM_AddBorder", dynlib: xcgui, discardable.}

proc XBkM_AddFill*(hBkInfoM: HBKM; nState: cint; color: COLORREF; alpha: BYTE) {.cdecl,
    importc: "XBkM_AddFill", dynlib: xcgui, discardable.}

proc XBkM_AddImage*(hBkInfoM: HBKM; nState: cint; hImage: HIMAGE) {.cdecl,
    importc: "XBkM_AddImage", dynlib: xcgui, discardable.}

proc XBkM_GetCount*(hBkInfoM: HBKM): cint {.cdecl, importc: "XBkM_GetCount",
                                        dynlib: xcgui, discardable.}

proc XBkM_Clear*(hBkInfoM: HBKM) {.cdecl, importc: "XBkM_Clear", dynlib: xcgui, discardable.}

proc XBkM_Draw*(hBkInfoM: HBKM; nState: cint; hDraw: HDRAW; pRect: ptr RECT): BOOL {.cdecl,
    importc: "XBkM_Draw", dynlib: xcgui, discardable.}

proc XBkM_DrawEx*(hBkInfoM: HBKM; nState: cint; hDraw: HDRAW; pRect: ptr RECT;
                 nStateEx: cint): BOOL {.cdecl, importc: "XBkM_DrawEx", dynlib: xcgui, discardable.}

proc XBtn_Create*(x: cint; y: cint; cx: cint; cy: cint; pName: ptr WCHAR;
                 hParent: HXCGUI = nil): HELE {.cdecl, importc: "XBtn_Create",
    dynlib: xcgui, discardable.}

#~ proc XBtn_Create*(x: cint; y: cint; cx: cint; cy: cint; pName: ptr WCHAR;
                 #~ hParent: cstring = nil): HELE {.
    #~ importc: "XBtn_Create", cdecl, dynlib:xcgui, discardable.}


proc XBtn_IsCheck*(hEle: HELE): BOOL {.cdecl, importc: "XBtn_IsCheck", dynlib: xcgui, discardable.}
## 按钮是否被选中


proc XBtn_SetCheck*(hEle: HELE; bCheck: BOOL): BOOL {.cdecl, importc: "XBtn_SetCheck",
    dynlib: xcgui, discardable.}

proc XBtn_SetState*(hEle: HELE; nState: common_state3) {.cdecl,
    importc: "XBtn_SetState", dynlib: xcgui, discardable.}

proc XBtn_GetState*(hEle: HELE): common_state3 {.cdecl, importc: "XBtn_GetState",
    dynlib: xcgui, discardable.}

proc XBtn_GetStateEx*(hEle: HELE): button_state {.cdecl, importc: "XBtn_GetStateEx",
    dynlib: xcgui, discardable.}

proc XBtn_SetStyle*(hEle: HELE; nStyle: XC_OBJECT_STYLE) {.cdecl,
    importc: "XBtn_SetStyle", dynlib: xcgui, discardable.}





proc XBtn_GetStyle*(hEle: HELE): XC_OBJECT_STYLE {.cdecl, importc: "XBtn_GetStyle",
    dynlib: xcgui, discardable.}

proc XBtn_SetType*(hEle: HELE; nType: XC_OBJECT_TYPE_EX) {.cdecl,
    importc: "XBtn_SetType", dynlib: xcgui, discardable.}

proc XBtn_SetTypeEx*(hEle: HELE; nType: XC_OBJECT_TYPE_EX) {.cdecl,
    importc: "XBtn_SetTypeEx", dynlib: xcgui, discardable.}

proc XBtn_GetType*(hEle: HELE): XC_OBJECT_TYPE_EX {.cdecl, importc: "XBtn_GetType",
    dynlib: xcgui, discardable.}

proc XBtn_SetGroupID*(hEle: HELE; nID: cint) {.cdecl, importc: "XBtn_SetGroupID",
    dynlib: xcgui, discardable.}

proc XBtn_GetGroupID*(hEle: HELE): cint {.cdecl, importc: "XBtn_GetGroupID",
                                      dynlib: xcgui, discardable.}

proc XBtn_SetBindEle*(hEle: HELE; hBindEle: HELE) {.cdecl, importc: "XBtn_SetBindEle",
    dynlib: xcgui, discardable.}

proc XBtn_GetBindEle*(hEle: HELE): HELE {.cdecl, importc: "XBtn_GetBindEle",
                                      dynlib: xcgui, discardable.}

proc XBtn_SetTextAlign*(hEle: HELE; nFlags: cint) {.cdecl,
    importc: "XBtn_SetTextAlign", dynlib: xcgui, discardable.}

proc XBtn_GetTextAlign*(hEle: HELE): cint {.cdecl, importc: "XBtn_GetTextAlign",
                                        dynlib: xcgui, discardable.}

#~ proc XBtn_SetIconAlign*(hEle: HELE; align: button_icon_align_) {.cdecl,
    #~ importc: "XBtn_SetIconAlign", dynlib: xcgui, discardable.}

proc XBtn_SetOffset*(hEle: HELE; x: cint; y: cint) {.cdecl, importc: "XBtn_SetOffset",
    dynlib: xcgui, discardable.}

proc XBtn_SetOffsetIcon*(hEle: HELE; x: cint; y: cint) {.cdecl,
    importc: "XBtn_SetOffsetIcon", dynlib: xcgui, discardable.}

proc XBtn_SetIconSpace*(hEle: HELE; size: cint) {.cdecl, importc: "XBtn_SetIconSpace",
    dynlib: xcgui, discardable.}

proc XBtn_GetText*(hEle: HELE; pOut: ptr WCHAR; nOutLen: cint) {.cdecl,
    importc: "XBtn_GetText", dynlib: xcgui, discardable.}

proc XBtn_SetText*(hEle: HELE; pName: ptr WCHAR) {.cdecl, importc: "XBtn_SetText",
    dynlib: xcgui, discardable.}

proc XBtn_SetIcon*(hEle: HELE; hImage: HIMAGE) {.cdecl, importc: "XBtn_SetIcon",
    dynlib: xcgui, discardable.}

proc XBtn_SetIconDisable*(hEle: HELE; hImage: HIMAGE) {.cdecl,
    importc: "XBtn_SetIconDisable", dynlib: xcgui, discardable.}

proc XBtn_GetIcon*(hEle: HELE; nType: cint): HIMAGE {.cdecl, importc: "XBtn_GetIcon",
    dynlib: xcgui, discardable.}

proc XBtn_AddAnimationFrame*(hEle: HELE; hImage: HIMAGE; uElapse: UINT) {.cdecl,
    importc: "XBtn_AddAnimationFrame", dynlib: xcgui, discardable.}

proc XBtn_EnableAnimation*(hEle: HELE; bEnable: BOOL; bLoopPlay: BOOL = FALSE) {.cdecl,
    importc: "XBtn_EnableAnimation", dynlib: xcgui, discardable.}

proc XBtn_AddBkBorder*(hEle: HELE; nState: button_state; color: COLORREF; alpha: BYTE;
                      width: cint) {.cdecl, importc: "XBtn_AddBkBorder",
                                   dynlib: xcgui, discardable.}

proc XBtn_AddBkFill*(hEle: HELE; nState: button_state; color: COLORREF; alpha: BYTE) {.
    cdecl, importc: "XBtn_AddBkFill", dynlib: xcgui, discardable.}

proc XBtn_AddBkImage*(hEle: HELE; nState: button_state; hImage: HIMAGE) {.cdecl,
    importc: "XBtn_AddBkImage", dynlib: xcgui, discardable.}

proc XBtn_GetBkInfoCount*(hEle: HELE): cint {.cdecl, importc: "XBtn_GetBkInfoCount",
    dynlib: xcgui, discardable.}

proc XBtn_ClearBkInfo*(hEle: HELE) {.cdecl, importc: "XBtn_ClearBkInfo", dynlib: xcgui, discardable.}

proc XComboBox_Create*(x: cint; y: cint; cx: cint; cy: cint; hParent: HXCGUI = nil): HELE {.
    cdecl, importc: "XComboBox_Create", dynlib: xcgui, discardable.}

proc XComboBox_SetSelItem*(hEle: HELE; iIndex: cint): BOOL {.cdecl,
    importc: "XComboBox_SetSelItem", dynlib: xcgui, discardable.}

proc XComboBox_GetButtonRect*(hEle: HELE; pRect: ptr RECT) {.cdecl,
    importc: "XComboBox_GetButtonRect", dynlib: xcgui, discardable.}

proc XComboBox_SetButtonSize*(hEle: HELE; size: cint) {.cdecl,
    importc: "XComboBox_SetButtonSize", dynlib: xcgui, discardable.}

proc XComboBox_SetDropHeight*(hEle: HELE; height: cint) {.cdecl,
    importc: "XComboBox_SetDropHeight", dynlib: xcgui, discardable.}
## 设置下拉列表高度


proc XComboBox_GetDropHeight*(hEle: HELE): cint {.cdecl,
    importc: "XComboBox_GetDropHeight", dynlib: xcgui, discardable.}

proc XComboBox_CreateAdapter*(hEle: HELE): HXCGUI {.cdecl,
    importc: "XComboBox_CreateAdapter", dynlib: xcgui, discardable.}

proc XComboBox_BindAdapter*(hEle: HELE; hAdapter: HXCGUI) {.cdecl,
    importc: "XComboBox_BindAdapter", dynlib: xcgui, discardable.}

proc XComboBox_GetAdapter*(hEle: HELE): HXCGUI {.cdecl,
    importc: "XComboBox_GetAdapter", dynlib: xcgui, discardable.}

proc XComboBox_SetBindName*(hEle: HELE; pName: ptr WCHAR) {.cdecl,
    importc: "XComboBox_SetBindName", dynlib: xcgui, discardable.}

proc XComboBox_SetItemTemplateXML*(hEle: HELE; pXmlFile: ptr WCHAR) {.cdecl,
    importc: "XComboBox_SetItemTemplateXML", dynlib: xcgui, discardable.}

proc XComboBox_SetItemTemplateXMLFromString*(hEle: HELE; pStringXML: cstring) {.
    cdecl, importc: "XComboBox_SetItemTemplateXMLFromString", dynlib: xcgui, discardable.}

proc XComboBox_EnableDrawButton*(hEle: HELE; bEnable: BOOL) {.cdecl,
    importc: "XComboBox_EnableDrawButton", dynlib: xcgui, discardable.}

proc XComboBox_EnableEdit*(hEle: HELE; bEdit: BOOL) {.cdecl,
    importc: "XComboBox_EnableEdit", dynlib: xcgui, discardable.}
## 启动编辑内容


proc XComboBox_EnableDropHeightFixed*(hEle: HELE; bEnable: BOOL) {.cdecl,
    importc: "XComboBox_EnableDropHeightFixed", dynlib: xcgui, discardable.}

proc XComboBox_AddBkBorder*(hEle: HELE; nState: comboBox_state; color: COLORREF;
                           alpha: BYTE; width: cint) {.cdecl,
    importc: "XComboBox_AddBkBorder", dynlib: xcgui, discardable.}

proc XComboBox_AddBkFill*(hEle: HELE; nState: comboBox_state; color: COLORREF;
                         alpha: BYTE) {.cdecl, importc: "XComboBox_AddBkFill",
                                      dynlib: xcgui, discardable.}

proc XComboBox_AddBkImage*(hEle: HELE; nState: comboBox_state; hImage: HIMAGE) {.
    cdecl, importc: "XComboBox_AddBkImage", dynlib: xcgui, discardable.}

proc XComboboX_GetBkInfoCount*(hEle: HELE): cint {.cdecl,
    importc: "XComboboX_GetBkInfoCount", dynlib: xcgui, discardable.}

proc XComboBox_ClearBkInfo*(hEle: HELE) {.cdecl, importc: "XComboBox_ClearBkInfo",
                                       dynlib: xcgui, discardable.}

proc XComboBox_GetSelItem*(hEle: HELE): cint {.cdecl,
    importc: "XComboBox_GetSelItem", dynlib: xcgui, discardable.}

#~ proc XComboBox_GetState*(hEle: HELE): comboBox_state_ {.cdecl,
    #~ importc: "XComboBox_GetState", dynlib: xcgui, discardable.}

proc XComboBox_AddItemText*(hEle: HELE; pText: ptr WCHAR): cint {.cdecl,
    importc: "XComboBox_AddItemText", dynlib: xcgui, discardable.}

proc XComboBox_AddItemTextEx*(hEle: HELE; pName: ptr WCHAR; pText: ptr WCHAR): cint {.
    cdecl, importc: "XComboBox_AddItemTextEx", dynlib: xcgui, discardable.}

proc XComboBox_AddItemImage*(hEle: HELE; hImage: HIMAGE): cint {.cdecl,
    importc: "XComboBox_AddItemImage", dynlib: xcgui, discardable.}

proc XComboBox_AddItemImageEx*(hEle: HELE; pName: ptr WCHAR; hImage: HIMAGE): cint {.
    cdecl, importc: "XComboBox_AddItemImageEx", dynlib: xcgui, discardable.}

proc XComboBox_InsertItemText*(hEle: HELE; iItem: cint; pValue: ptr WCHAR): cint {.
    cdecl, importc: "XComboBox_InsertItemText", dynlib: xcgui, discardable.}

proc XComboBox_InsertItemTextEx*(hEle: HELE; iItem: cint; pName: ptr WCHAR;
                                pValue: ptr WCHAR): cint {.cdecl,
    importc: "XComboBox_InsertItemTextEx", dynlib: xcgui, discardable.}

proc XComboBox_InsertItemImage*(hEle: HELE; iItem: cint; hImage: HIMAGE): cint {.cdecl,
    importc: "XComboBox_InsertItemImage", dynlib: xcgui, discardable.}

proc XComboBox_InsertItemImageEx*(hEle: HELE; iItem: cint; pName: ptr WCHAR;
                                 hImage: HIMAGE): cint {.cdecl,
    importc: "XComboBox_InsertItemImageEx", dynlib: xcgui, discardable.}

proc XComboBox_SetItemText*(hEle: HELE; iItem: cint; iColumn: cint; pText: ptr WCHAR): BOOL {.
    cdecl, importc: "XComboBox_SetItemText", dynlib: xcgui, discardable.}

proc XComboBox_SetItemTextEx*(hEle: HELE; iItem: cint; pName: ptr WCHAR;
                             pText: ptr WCHAR): BOOL {.cdecl,
    importc: "XComboBox_SetItemTextEx", dynlib: xcgui, discardable.}
